[BOT] Parametrized button texts